<resources>
    <string name="app_name">Doctor Booking App</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="sign_up_button">Sign Up</string>
    <string name="login_button">Login As Patient</string>
    <string name="login_button2">Login As Doctor</string>
    <string name="forgot_password_button">Forgot your password?</string>
    <string name="first_name">What is your first name?</string>
    <string name="health_card_number">What is your health card number?</string>
    <string name="last_name">What is your last name?</string>
    <string name="email">What is your email address?</string>
    <string name="phone_number">What is your phone number?</string>
    <string name="specialization">Please enter your specialization. Enter "Doctor" if none.</string>
    <string name="times_available">Enter the available times in this format: [Day of the week] [24hr time], followed by a comma. For example: Monday 1:00, Monday 2:00, Tuesday 8:00).</string>
    <string name="username">Enter your username.</string>
    <string name="password">Enter your password.</string>
    <string name="submit">Submit</string>
    <string name="sign_up">Sign Up</string>
    <string name="change_password">Forgot password?</string>
    <string name="change_password_question">Type in your new password.</string>
    <string name="password_confirmation">Confirm your new password.</string>
    <string name="change_password_button">Change password</string>
    <string name="is_Doctor">Are you a doctor?</string>
    <string name="book_button">Book an Appointment</string>
    <string name="view_appointment">Upcoming Appointments</string>
    <string name="past_doctors">Past Doctors</string>
    <string name="gender">What is your gender (M/F)?</string>
    <string name="date_of_birth">What is your date of birth (DD/MM/YYYY)?</string>
    <string name="Doctor">Doctor</string>
    <string name="Patient">Patient</string>
    <string name="iam">I am a:</string>
    <string name="login">Log in</string>
    <string name="newuser">New Users</string>
    <string name="ExistingUsers">Existing Users</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="logout">Log out</string>
    <string name="spec">Specialization</string>
    <string name="DoctorGender">Doctor Gender</string>
    <string name="apply">Apply</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="Reset">Reset</string>
</resources>
